Cleanup PipelineDefinition